; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/m32r/platforms/m32700ut/extr_setup.c_shutdown_m32700ut_lanpld_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/m32r/platforms/m32700ut/extr_setup.c_shutdown_m32700ut_lanpld_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PLD_ICUCR_ILEVEL7 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @shutdown_m32700ut_lanpld_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @shutdown_m32700ut_lanpld_irq(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @irq2lanpldirq(i32 %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i64 @lanpldirq2port(i32 %7)
  store i64 %8, i64* %3, align 8
  %9 = load i32, i32* @PLD_ICUCR_ILEVEL7, align 4
  %10 = load i64, i64* %3, align 8
  %11 = call i32 @outw(i32 %9, i64 %10)
  ret void
}

declare dso_local i32 @irq2lanpldirq(i32) #1

declare dso_local i64 @lanpldirq2port(i32) #1

declare dso_local i32 @outw(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
